<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service_edit_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service_edit_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/icon_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/how_was_service"
        app:layout_constraintBottom_toBottomOf="@id/how_was_service"/>

    <TextView
        android:id="@+id/how_was_service"
        style="@style/Widget.TipTime2.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/how_was_service"

        app:layout_constraintStart_toEndOf="@id/icon_service"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service_edit_text" />
    <RadioGroup
        android:id="@+id/select_tip_option"
        android:layout_width="0dp"
        style="@style/Widget.TipTime.CompoundButton.RadioButton"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/fifteen_percent"
        app:layout_constraintStart_toStartOf="@id/how_was_service"
        app:layout_constraintTop_toBottomOf="@id/how_was_service"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"/>
        <RadioButton
            android:id="@+id/eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18"/>
        <RadioButton
            android:id="@+id/fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up"
        app:layout_constraintBottom_toBottomOf="@id/round_up"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up"
        style="@style/Widget.TipTime.CompoundButton.Switch"
        android:checked="true"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_tip_option"
        />
    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@id/round_up"
        app:layout_constraintTop_toBottomOf="@id/round_up"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/result"
        style="@style/Widget.TipTime2.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Amount $10"
        android:text="Tip Amount: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>